--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="/WhatsApp Image 2025-01-13 at 23.20.31_1b443e03.jpg" height="120" width="120">
+        <img src="https://github.com/shyamagrawal64/MY-WEBSITE/blob/main/WhatsApp%20Image%202025-01-13%20at%2023.20.31_1b443e03.jpg>
         <h1>Shyam Agrawal</h1>
         <p>Email: shyam.agrawal2023@vitstudent.ac.in | Phone: +91 7389071157 | Location: Vellore</p>
         <p>
